WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199167
[StyleResolver] Pass RenderStyle& instead of RenderStyle* to updateFont() related functions.
https://bugs.webkit.org/show_bug.cgi?id=199167
Summary
[StyleResolver] Pass RenderStyle& instead of RenderStyle* to updateFont() rel...
alan
Reported
2019-06-24 11:34:18 PDT
it is expected to have a valid style object here.
Attachments
Patch
(6.79 KB, patch)
2019-06-24 11:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-24 11:35:01 PDT
<
rdar://problem/52062669
>
alan
Comment 2
2019-06-24 11:36:56 PDT
Created
attachment 372777
[details]
Patch
WebKit Commit Bot
Comment 3
2019-06-24 12:38:05 PDT
Comment on
attachment 372777
[details]
Patch Clearing flags on attachment: 372777 Committed
r246755
: <
https://trac.webkit.org/changeset/246755
>
WebKit Commit Bot
Comment 4
2019-06-24 12:38:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug