[StyleResolver] Pass RenderStyle& instead of RenderStyle* to updateFont() related functions. https://bugs.webkit.org/show_bug.cgi?id=199167 <rdar://problem/52062669>

Reviewed by Antti Koivisto.

It is expected to have a valid RenderStyle object here (and existing code relies on it).

* css/StyleResolver.cpp:
(WebCore::checkForOrientationChange):
(WebCore::StyleResolver::updateFont):
(WebCore::StyleResolver::checkForTextSizeAdjust):
(WebCore::StyleResolver::checkForZoomChange):
(WebCore::StyleResolver::checkForGenericFamilyChange):
* css/StyleResolver.h:


Canonical link: https://commits.webkit.org/213134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246755 268f45cc-cd09-0410-ab3c-d52691b4dbfc